--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,1 +1,86 @@
-//
+body{
+background-image: linear-gradient(to top, #fdcbf1 0%, #fdcbf1 1%, #e6dee9);
+height: 100%;
+background-position: center;
+background-repeat: repeat;
+background-size: cover;
+font-family: 'Varela Round', sans-serif;
+
+}
+
+a {
+    color: #26b4ad;
+
+}
+
+a:hover{
+    color: #fdcbf1;
+
+}
+
+b{
+    color: #26b4ad;
+}
+
+h1{
+    font-family: 'Montserrat', sans-serif;
+}
+
+h2 {
+    font-family: 'Montserrat', sans-serif;
+}
+
+h3 {
+    font-family: 'Montserrat', sans-serif;
+}
+
+h4 {
+    font-family: 'Montserrat', sans-serif;
+}
+
+hr {
+    overflow: visible;
+    /* For IE */
+    height: 30px;
+    border-style: solid;
+    border-color: #fdcbf1;
+    border-width: 1px 0 0 0;
+    border-radius: 20px;
+}
+
+hr:before {
+    display: block;
+    content: "";
+    height: 30px;
+    margin-top: -31px;
+    border-style: solid;
+    border-color: #fdcbf1;
+    border-width: 0 0 1px 0;
+    border-radius: 20px;
+}
+
+.md-form.md-bg input[type=date],
+.md-form.md-bg input[type=datetime-local],
+.md-form.md-bg input[type=email],
+.md-form.md-bg input[type=number],
+.md-form.md-bg input[type=password],
+.md-form.md-bg input[type=search-md],
+.md-form.md-bg input[type=search],
+.md-form.md-bg input[type=tel],
+.md-form.md-bg input[type=text],
+.md-form.md-bg input[type=time],
+.md-form.md-bg input[type=url],
+.md-form.md-bg textarea.md-textarea {
+
+    background-color: #f5f5f5 !important;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#fdcbf1), to(#fdcbf1)), -webkit-gradient(linear, left top, left bottom, from(#ced4da), to(#ced4da)) !important;
+    background-image: -webkit-linear-gradient(top, #fdcbf1, #fdcbf1), -webkit-linear-gradient(top, #ced4da, #ced4da) !important;
+    background-image: -o-linear-gradient(top, #fdcbf1, #fdcbf1), -o-linear-gradient(top, #ced4da, #ced4da) !important;
+    background-image: linear-gradient(to bottom, #fdcbf1, #fdcbf1), linear-gradient(to bottom, #ced4da, #ced4da) !important;
+    -webkit-background-size: 0 3px, 100% 3px;
+    background-size: 0 3px, 100% 3px;
+    -webkit-transition: -webkit-background-size .3s cubic-bezier(.64, .09, .08, 1);
+    -o-transition: background-size .3s cubic-bezier(.64, .09, .08, 1);
+    transition: background-size .3s cubic-bezier(.64, .09, .08, 1);
+    transition: background-size .3s cubic-bezier(.64, .09, .08, 1), -webkit-background-size .3s cubic-bezier(.64, .09, .08, 1);
+}
